.err
206.c: In function 'ListNode* func(ListNode*)':
206.c:12:13: error: invalid use of incomplete type 'struct ListNode'
     if (node->next == NULL) {
             ^~
206.c:11:8: note: forward declaration of 'struct ListNode'
 struct ListNode* func(struct ListNode* node){
        ^~~~~~~~
206.c:12:23: error: 'NULL' was not declared in this scope
     if (node->next == NULL) {
                       ^~~~
206.c:12:23: note: 'NULL' is defined in header '<cstddef>'; did you forget to '#include <cstddef>'?
206.c:1:1:
+#include <cstddef>
 // 反转链表
206.c:12:23:
     if (node->next == NULL) {
                       ^~~~
206.c:13:13: warning: statement has no effect [-Wunused-value]
         node;
             ^
206.c:16:37: error: invalid use of incomplete type 'struct ListNode'
     struct ListNode* res = func(node->next);
                                     ^~
206.c:11:8: note: forward declaration of 'struct ListNode'
 struct ListNode* func(struct ListNode* node){
        ^~~~~~~~
206.c:17:9: error: invalid use of incomplete type 'struct ListNode'
     node->next->next = node;
         ^~
206.c:11:8: note: forward declaration of 'struct ListNode'
 struct ListNode* func(struct ListNode* node){
        ^~~~~~~~
206.c:18:9: error: invalid use of incomplete type 'struct ListNode'
     node->next = NULL;
         ^~
206.c:11:8: note: forward declaration of 'struct ListNode'
 struct ListNode* func(struct ListNode* node){
        ^~~~~~~~
206.c:18:18: error: 'NULL' was not declared in this scope
     node->next = NULL;
                  ^~~~
206.c:18:18: note: 'NULL' is defined in header '<cstddef>'; did you forget to '#include <cstddef>'?
206.c: In function 'ListNode* reverseList(ListNode*)':
206.c:24:15: error: 'NULL' was not declared in this scope
     if (head==NULL) return NULL;
               ^~~~
206.c:24:15: note: 'NULL' is defined in header '<cstddef>'; did you forget to '#include <cstddef>'?
206.c:25:28: error: 'NULL' was not declared in this scope
     struct ListNode* res = NULL;
                            ^~~~
206.c:25:28: note: 'NULL' is defined in header '<cstddef>'; did you forget to '#include <cstddef>'?
